# green_code_smell

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  carbon_emission_validate  emissions.csv  history.json  pyproject.toml  requirements.txt
docs/: carbon_emission_validation.md  release.md
src/green_code_smell/: __init__.py  __main__.py  checker.py  cli.py  constants.py  core.py
src/green_code_smell/rules/: __init__.py  dead_code.py  duplicated_code.py  god_class.py  log_excessive.py  long_method.py  mutable_default_arguments.py
src/pygreensense/: __init__.py  __main__.py  cli.py
tests/: after.py  after2.py  all.py  before.py  biggod.py  dupe.py  example.py  good.py  good_class.py  no_dupe.py  no_long_method.py  nodupe.py  nogod.py  test_dupe.py  test_god.py  test_log.py  validate_parity.py
tests/b/: b.py
tests/unit/: test_cli_carbon_flow.py  test_cli_helpers.py  test_core_and_rules.py  test_public_api.py
