[project]
name = "green_code_smell"
version = "0.0.1.1"
authors = [
  { name="chocody", email="chgun47@gmail.com" },
]
description = "A green code smell package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/chocody/green_code_smell"
Issues = "https://github.com/chocody/green_code_smell/issues"