[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygreensense"
version = "0.0.3"
authors = [
  { name="chocody", email="chgun47@gmail.com" },
]
description = "A green code smell detection package"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["green software", "code smells", "static analysis", "carbon emissions", "sustainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
carbon = [
    "codecarbon>=1.25.0",
]
dev = [
    "build>=0.10.0",
    "codecarbon>=1.25.0",
    "pytest>=7.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/u6587051/PyGreenSense-Library"
Repository = "https://github.com/u6587051/PyGreenSense-Library"
Issues = "https://github.com/u6587051/PyGreenSense-Library/issues"

[project.scripts]
pygreensense = "pygreensense.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["green_code_smell*", "pygreensense*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]
